# fighters

./: Cargo.toml
src/: main.rs  util.rs
src/component/: mod.rs  player.rs
src/entity/: mod.rs
src/system/: forward_moving.rs  kinematics.rs  mod.rs  yaw.rs
